--- a/src/main/resources/templates/estudiante.html
+++ b/src/main/resources/templates/estudiante.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>TITULOXD</title>
+    <title>PRUEBA</title>
 </head>
 <body>
 <table>
