--- a/src/main/resources/templates/estudianteNuevo.html
+++ b/src/main/resources/templates/estudianteNuevo.html
@@ -2,19 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="UTF-8">
+
 	<title>PRUEBA</title>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta http-equiv="x-ua-competible">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-	<form th:action="@{/estudiantes/insertar}" th:object="${estudiante}"  method="post" >
+	<form action='#' th:action="@{/estudiantes/insertar}" th:object="${estudiante}" method="post">
 		<table>
 			<tr>
 				<td>
-					<label>Nombre:</label>
+					<label for="name">Nombre:</labelfor="name">
 				</td>
 				<td>
-					<input type="text" id="nombre" th:field = "*{nombre}" placeholder="string">
+					<input type="text" id="nombre" th:field="*{nombre}">
 				</td>
 			</tr>
 			<tr>
@@ -22,7 +30,7 @@
 					<label>Apellido: </label>
 				</td>
 				<td>
-					<input type="text" id="apellido" th:field = "*{apellido}" placeholder="string">
+					<input type="text" id="apellido" th:field="*{apellido}">
 				</td>
 			</tr>
 
