--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <title>PRUEBA</title>
+
+	<title>PRUEBA</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta http-equiv="x-ua-competible">
+	
+	<link th:href="@{/css/misprimerosestilos.css}" rel="stylesheet" >
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		
 </head>
+
 
 <body>
 
-	<table>
+	<div th:text="${mensaje}" th:if="${mensaje!=null}">
+
+	</div>
+
+	<h1>
+		MI PAGINA PRINCIPAL
+	</h1>
+
+	<table class="table table-dark table-striped">
 		<!--Cabezera de tabla-->
 		<thead>
 			<tr>
@@ -15,19 +35,35 @@
 				<th>ID</th>
 				<th>Nombre</th>
 				<th>Apellido</th>
+				<th>Editar</th>
+				<th>Borrar</th>
 			</tr>
 		</thead>
 		<!--Cuerpo de tabla-->
+
 		<tbody>
 			<!--th:each tmb sirve como un for each-->
 			<!--for (Integer valor:listaInteger)-->
 			<!--estudiantes esta en el controller en el modelo add atribute-->
 			<tr th:each="estudiante : ${estudiantes}">
-				<td th:text="${estudiante.id}"> </td>
-				<td th:text="${estudiante.nombre}"> </td>
-				<td th:text="${estudiante.apellido}"> </td>
+
+				<form action "#" th:action="@{/estudiantes/borrar/{id}(id=${estudiante.id})}" th:object="${estudiante}"
+					th:method="delete">
+
+					<td th:text="${estudiante.id}"> </td>
+					<td th:text="${estudiante.nombre}"> </td>
+					<td th:text="${estudiante.apellido}"> </td>
+
+					<td> </td>
+					<td>
+						<input type="submit" value="Borrar">
+					</td>
+				</form>
+
 			</tr>
 		</tbody>
+
+
 
 	</table>
 
